2003-12-10  Zack Weinberg  <zack@codesourcery.com>

	* ppc-opc.c (MO): Make optional.
	(RAO, RSO, SHO): New optional forms of RA, RS, SH operands.
	(tlbwe): Accept for both PPC403 and BOOKE.  Make all operands optional.

2003-12-05  Ricardo Anguiano <anguiano@codesourcery.com>
	    Mark Mitchell  <mark@codesourcery.com>
	    Richard Earnshaw  <rearnsha@arm.com>

	* arm-dis.c (print_arm_insn): Add 'W' macro.
	* arm-opc.h (arm_opcodes): Add V6 instructions.
	(thumb_opcodes): Likewise.

2003-12-04  Alan Modra  <amodra@bigpond.net.au>

	* openrisc-asm.c: Regenerate.
	* pj-opc.c: Update copyright date.

2003-12-03  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>

	* m32r-asm.c: Regenerate.
	* m32r-desc.c: Regenerate.
	* m32r-desc.h: Regenerate.
	* m32r-dis.c: Regenerate.
	* m32r-ibld.c: Regenerate.
	* m32r-opc.c: Regenerate.
	* m32r-opc.h: Regenerate.
	* m32r-opinst.c: Regenerate.

2003-12-02  Alexandre Oliva  <aoliva@redhat.com>

	* sh-opc.h: Add support for sh4a and no-fpu variants.
	* sh-dis.c: Ditto.

2003-12-02  Kazu Hirata  <kazu@cs.umass.edu>

	* alpha-opc.c: Remove ARGSUSED.
	* i370-opc.c: Likewise.
	* ppc-opc.c: Likewise.

2003-12-02  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.

2003-11-28  Christian Groessler  <chris@groessler.org>

	* z8k-dis.c: Convert to ISO C90.
	* z8kgen.c: Convert to ISO C90.
	(opt): Move long opcode for "ldb rdb,imm8" after short one, now
	the short one is created when assembling.
	* z8k-opc.h: Regenerate with new z8kgen.c.

2003-11-19  Kazu Hirata  <kazu@cs.umass.edu>

	* h8300-dis.c (print_colon_thingie): Remove.

2003-11-18  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* mips-opc.c (mips_builtin_opcodes): Handle new macros: "lca" and
	"dlca".

2003-11-14  Nick Clifton  <nickc@redhat.com>

	* dis-init.c (init_disassemble_info): Initialise
	symbol_is_valid field.
	* dis-buf.c (generic_symbol_is_valid): New function.  Always
	returns TRUE.